rendering the maps

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
     <title>Videogame</title>
   </head>
   <body>
@@ -26,7 +26,7 @@
       </div>
     </div>
 
-    <scrip src="./maps.js"></scrip>
+    <script src="./maps.js"></script>
     <script src="./index.js"></script>
   </body>
 </html>
